--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "clsx": "^2.1.1",
     "eslint": "8.57.0",
     "eslint-config-next": "14.2.3",
+    "motion": "^12.23.24",
     "next": "14.2.3",
     "react": "18.3.1",
     "react-dom": "18.3.1",
